--- a/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
+++ b/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
@@ -77,10 +77,13 @@
     <Compile Include="ItemKey.cs" />
     <Compile Include="MockData.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="model\CCMComponent.cs" />
+    <Compile Include="model\ComponentKey.cs" />
+    <Compile Include="model\ComponentType.cs" />
     <Compile Include="NodeItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Topology.cs" />
+    <Compile Include="model\Topology.cs" />
     <EmbeddedResource Include="AfterForm.resx">
       <DependentUpon>AfterForm.cs</DependentUpon>
     </EmbeddedResource>
