Fix project repository

--- a/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
+++ b/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
@@ -116,7 +116,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\Response.txt" />
+    <Content Include="Data\Response.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
