--- a/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
+++ b/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
@@ -68,7 +68,9 @@
     </Compile>
     <Compile Include="CCMModelItem.cs" />
     <Compile Include="CCMModelItemKey.cs" />
-    <Compile Include="Components.cs" />
+    <Compile Include="model\Attribute.cs" />
+    <Compile Include="model\Component.cs" />
+    <Compile Include="model\ComponentKey.cs" />
     <Compile Include="DatabaseTypeHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -79,10 +81,11 @@
     <Compile Include="ItemKey.cs" />
     <Compile Include="MockData.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="model\ComponentType.cs" />
     <Compile Include="NodeItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Topology.cs" />
+    <Compile Include="model\Topology.cs" />
     <EmbeddedResource Include="AfterForm.resx">
       <DependentUpon>AfterForm.cs</DependentUpon>
     </EmbeddedResource>
