--- a/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
+++ b/ImproveCCMUploadTime/ImproveCCMUploadTime.csproj
@@ -42,6 +42,9 @@
     <Reference Include="DevExpress.XtraPrinting.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v17.2, Version=17.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -68,9 +71,12 @@
     </Compile>
     <Compile Include="CCMModelItem.cs" />
     <Compile Include="CCMModelItemKey.cs" />
-    <Compile Include="model\Attribute.cs" />
-    <Compile Include="model\Component.cs" />
-    <Compile Include="model\ComponentKey.cs" />
+    <Compile Include="Model\Attribute.cs" />
+    <Compile Include="Model\AdditionalAttributes.cs" />
+    <Compile Include="Model\Attributes.cs" />
+    <Compile Include="Resources\CCMResource.cs" />
+    <Compile Include="Model\Component.cs" />
+    <Compile Include="Model\ComponentKey.cs" />
     <Compile Include="DatabaseTypeHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -81,12 +87,13 @@
     <Compile Include="ItemKey.cs" />
     <Compile Include="MockData.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="model\ComponentState.cs" />
-    <Compile Include="model\ComponentType.cs" />
+    <Compile Include="Resources\ComponentResources.cs" />
+    <Compile Include="Model\ComponentState.cs" />
+    <Compile Include="Model\ComponentType.cs" />
     <Compile Include="NodeItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="model\Topology.cs" />
+    <Compile Include="Model\Topology.cs" />
     <EmbeddedResource Include="AfterForm.resx">
       <DependentUpon>AfterForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,6 +113,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
